--- a/about.html
+++ b/about.html
@@ -61,22 +61,44 @@
                     <h2>Person In-charge:</h2>
                     <br>
                     <h3>Director:</h3> 
-                    <h4>Dr. Pushpalata (Principal, BCE Bhagalpur)</h4>
+                    <h4>Dr. OP ROY (Principal, BCE Bhagalpur)</h4>
                     <br>
                     <h3>Chairperson:</h3> 
-                    <h4>Prof. R.K Mishra (H.O.D. of Physics)</h4>
-                    <h4>Prof. Shashank Shekhar (H.O.D. of English)</h4>
+
+                 <h4>Prof. Shashank Shekhar (H.O.D. of English)</h4>
                     <br>
-                    <h3>Secretary and founder:</h3> 
+                    <h3>founder:</h3> 
                     <h4>Kumar Gaurav (2k19)</h4>
                     <br>
-                    <h3>Coordinators:</h3> 
+                    <h3>Co- founder :</h3> 
                     <h4>Kr. Chandra Bhanu</h4>
                     <h4><a href="https://himanshu-vishwas.github.io" style="color: black;" target="_blank">Himanshu Kumar</a></h4>
-                    <h4>Prameet Kumar</h4>
-                    <h4>Aakash Bhardwaj</h4>
+
+                    <h3> secretary </h3>
+                    <h4>keshav jha (2021) </h4>
                     <br>
+
+                      <h3>Deputy secretary </h3>
+                    <h4>khushi (2021) </h4>
+                    <h4>Apar Swaroop (2021) </h4>
+                    <br>
+
+                        <h3> coordinators (2021)  </h3>
+                    <h4>Aman kr (2021) </h4>
+                     <h4> Anshika (2021) </h4>
+                     <h4> srishty saumya (2021) </h4>
+                     <h4> Rupali  </h4>
+                     <h4> Arpita   </h4>
+                     <h4>Aashish  </h4>
+                     <h4>Shubham  </h4>
+                     <h4>sonali  </h4>
+                     <h4>smriti  </h4>
+                     <h4>Ragni  </h4>
+                     <h4>Tannu  </h4>
+                     <h4>Avinash  </h4>
+                     <h4>sweety  </h4>
                     
+                    <br>
                     Stay connected!
                   </p>  
 
