--- a/about.html
+++ b/about.html
@@ -76,6 +76,7 @@
 
                     <h3> secretary </h3>
                     <h4>keshav jha (2021) </h4>
+        <h4><a href="https://github.com/keshavjha005" style="color: black;" target="_blank">keshav jha</a></h4>
                     <br>
 
                       <h3>Deputy secretary </h3>
