--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
                     <br>
                     <h3>Co- founder :</h3> 
                     <h4>Kr. Chandra Bhanu</h4>
-                    <h4><a href="https://himanshu-vishwas.github.io" style="color: black;" target="_blank">Himanshu Kumar</a></h4>
+              
 
                     <h3> secretary </h3>
                     <h4>keshav jha (2021) </h4>
@@ -122,7 +122,7 @@
         <div>
             <img src="img/gallery/Secretary.jpg" alt="" style="width: 100%;" />
             <p style="font-weight: bold; text-align: center;">
-             Kumar Gaurav: Founder and secretary of the club.
+             Kumar Gaurav: Founder  of the club.
             </p>
            
           </div>
